--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 MONGO_URI=mongodb://localhost:27017/authentication
 PORT=7000
 SECRET_KEY=qwerty12345
+EMAIL_USER=nirajan98689@gmail.com
+EMAIL_PASS=vdvb rbva aznb vwsz
