--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "module": "commonjs",
   "scripts": {
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon` ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "morgan": "~1.9.1",
+    "nodemailer": "^7.0.11",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0"
   }
