--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.1",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^17.2.3",
     "express": "~4.16.1",
